fix-->Comentarios y editar contraseña
*Se cambio el mensje de agregar y eliminar comentario
*Se le añadio un scrollbar al comentario
*Al  editar la contraseña ahora te pide la contraseña actual para poder cambiarla

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -614,6 +614,12 @@ div:where(.swal2-container) button:where(.swal2-styled).swal2-cancel {
     margin-top: 1rem;
 }
 
+.comentario-contenedor {
+    max-height: 11rem;
+    overflow-y: auto;
+    border-radius: 4px;
+}
+
 
 @media screen and (max-width: 990px) {
 	.div-escudo {
